@@ -1,7 +1,6 @@
 package com.knf.dev.librarymanagementsystem.util;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.knf.dev.librarymanagementsystem.entity.Author;
 import com.knf.dev.librarymanagementsystem.entity.Book;
@@ -13,38 +12,33 @@ import com.knf.dev.librarymanagementsystem.vo.CategoryRecord;
 import com.knf.dev.librarymanagementsystem.vo.PublisherRecord;
 
 public class Mapper {
+	Mapper(){
+		throw new IllegalStateException("Utility class");
+	}
 
 	public static List<BookRecord> bookModelToVo(List<Book> books) {
-
-		return books.stream().map(vo -> {
-			var bookVo = new BookRecord(vo.getId(), vo.getIsbn(), vo.getName(), vo.getSerialName(),
-					vo.getDescription());
-			return bookVo;
-		}).collect(Collectors.toList());
+		return books.stream().map(vo ->
+			new BookRecord(vo.getId(), vo.getIsbn(), vo.getName(), vo.getSerialName(),
+					vo.getDescription())
+		).toList();
 	}
 
 	public static List<AuthorRecord> authorModelToVo(List<Author> authors) {
-
-		return authors.stream().map(vo -> {
-			var authorVo = new AuthorRecord(vo.getId(), vo.getName(), vo.getDescription());
-			return authorVo;
-		}).collect(Collectors.toList());
-
+		return authors.stream().map(vo ->
+			new AuthorRecord(vo.getId(), vo.getName(), vo.getDescription())
+		).toList();
 	}
 
 	public static List<CategoryRecord> categoryModelToVo(List<Category> categories) {
-
-		return categories.stream().map(vo -> new CategoryRecord(vo.getId(), vo.getName())).toList();
-
+		return categories.stream().map(vo ->
+				new CategoryRecord(vo.getId(), vo.getName())
+		).toList();
 	}
 
 	public static List<PublisherRecord> publisherModelToVo(List<Publisher> publishers) {
-
-		return publishers.stream().map(vo -> {
-			var publisherVo = new PublisherRecord(vo.getId(), vo.getName());
-			return publisherVo;
-		}).collect(Collectors.toList());
-
+		return publishers.stream().map(vo ->
+			new PublisherRecord(vo.getId(), vo.getName())
+		).toList();
 	}
 
 }
